deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ci-cd-app
  template:
    metadata:
      labels:
        app: ci-cd-app
    spec:
      containers:
      - name: ci-cd-app
        image: jonty0731/ci-cd-docker-github-actions:latest
        ports:
        - containerPort: 3000
