service.yml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-service
spec:
  selector:
    app: ci-cd-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
