ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-cd-ingress
spec:
  rules:
  - host: ci-cd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ci-cd-service
            port:
              number: 3000
